[package]
name = "rest-api"
version = "0.1.0"
authors = ["mehrdadep <esmaeilpour.mehrdad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-multipart = "0.2.0"
sanitize-filename = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.5"
